# random

./: A.cpp  C_Two_Movies.cpp  a.out  ads  ads.cpp  ads2  file.ll  idk.bc  idk.cpp  idk3
.cph/: .C_Two_Movies.cpp_7e2a14d9bb25339028cd2e0be89d98b1.prob
advent_of_code/: 1  1A.cpp  1B  1B.cpp
asd/: lekaren.py  lekaren.txt  muzeum.py  need_for_speed.py  need_for_speed2.py
codeforces/: A_Chess_For_Three  A_Chess_For_Three.cpp  A_My_First_Sorting_Problem.cpp  A_Nene_s_Game  A_Nene_s_Game.cpp  A_Odd_One_Out.cpp  A_Permutation_Counting  A_Permutation_Counting.cpp  A_Phone_Desktop  A_Too_Min_Too_Max  A_Too_Min_Too_Max.cpp  B_2_Reverse_Card_Hard_Version.cpp  B_Angry_Monk.cpp  B_Cat_Fox_and_the_Lonely_Array  B_Cat_Fox_and_the_Lonely_Array.cpp  B_Different_String.cpp  B_Doremy_s_Connecting_Plan  B_Doremy_s_Connecting_Plan.cpp  B_Missing_Subsequence_Sum  B_Missing_Subsequence_Sum.cpp  B_Symmetric_Encoding  B_Symmetric_Encoding.cpp  C_2_Game_on_Tree_Medium  C_2_Game_on_Tree_Medium.cpp  C_3_Game_on_Tree_Hard  C_3_Game_on_Tree_Hard.cpp  C_Arrow_Path  C_Arrow_Path.cpp  C_Beautiful_Triple_Pairs  C_Beautiful_Triple_Pairs.cpp  C_Cat_Fox_and_Double_Maximum  C_Cat_Fox_and_Double_Maximum.cpp  C_Clock_and_Strings.cpp  C_Find_a_Mine.cpp  (+90 more)
dice/: a.ipynb  (+6 more)
game/cpp/: CMakeLists.txt  build_and_run.sh  enums.hpp  game.cpp  game.hpp  main.cpp  player.hpp  utils.cpp  utils.hpp
game/cpp/controls/: button.cpp  button.hpp
game/cpp/scenes/: game_scene.cpp  game_scene.hpp  scene.cpp  scene.hpp
game/cpp/tilemap/: tile.cpp  tile.hpp  tilemap.cpp  tilemap.hpp
game/cpp/units/: unit.cpp  unit.hpp
(+325 files in other folders)
